--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,8 @@ Authors@R: person("Christopher", "Prener", email = "chris.prener@slu.edu",
                   role = c("aut", "cre"))
 Description: This is the repository for Lecture 10 of the Saint Louis University
     course SOC 4650/5650 - Introduction to GIS. This lecture covers techniques
-    for working with different projection systems and projecting x,y data.
+    for working with different projection systems and projecting x,y data in `R` 
+    and ArcGIS.
 Depends: R (>= 3.3)
 License: GPL-3
 Web: https://slu-soc5650.github.io
