--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,7 +47,7 @@ build_script:
   - travis-tool.sh install_deps
 
 test_script:
-
+  - Rscript -e "rmarkdown::render('examples/lecture-10.Rmd')"
 
 on_failure:
   - 7z a failure.zip *.Rcheck\*
